--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,8 @@
 @import "../scss/dev-scss/header.scss";
 
 @import "../scss/slick-theme.scss";
+@import "../scss/constants/_constants.scss";
+
 
 
 
