--- a/src/scss/constants/_constants.scss
+++ b/src/scss/constants/_constants.scss
@@ -7,10 +7,112 @@ $title-text-color: #ffffff;
 $subtitle-text-color: #FFFFFF;
 $footer-text-color: #85899C;
 
-a{
+a {
     text-decoration: none;
-    color:$subtitle-text-color ;
-    &:hover{
+    color: $subtitle-text-color;
+
+    &:hover {
         color: $primary1;
     }
+}
+$fon: #6A6A6A;
+
+
+
+
+
+.btn-menu {
+    max-width: 171px;
+    max-height: 50px;
+    color: #fff;
+    background-color: $primary1;
+    border-color: $primary1;
+    border-radius: 20px;
+}
+
+.btn-menu:hover {
+    color: #fff;
+    background-color: $primary3;
+    border-color: $primary3;
+}
+
+.btn-check:focus+.btn-menu,
+.btn-menu:focus {
+    color: #fff;
+    background-color: #5c636a;
+    border-color: #565e64;
+    box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+}
+
+.btn-check:checked+.btn-menu,
+.btn-check:active+.btn-menu,
+.btn-menu:active,
+.btn-menu.active,
+.show>.btn-menu.dropdown-toggle {
+    color: #fff;
+    background-color: #565e64;
+    border-color: #51585e;
+}
+
+.btn-check:checked+.btn-menu:focus,
+.btn-check:active+.btn-menu:focus,
+.btn-menu:active:focus,
+.btn-menu.active:focus,
+.show>.btn-menu.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+}
+
+.btn-menu:disabled,
+.btn-menu.disabled {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.btn-carusel {
+    max-width: 191px;
+    max-height: 50px;
+    color: #fff;
+    background-color: $primary1;
+    border-color: $primary1;
+    border-radius: 20px;
+}
+
+.btn-carusel:hover {
+    color: #fff;
+    background-color: $primary3;
+    border-color: $primary3;
+}
+
+.btn-check:focus+.btn-carusel,
+.btn-carusel:focus {
+    color: #fff;
+    background-color: #5c636a;
+    border-color: #565e64;
+    box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+}
+
+.btn-check:checked+.btn-carusel,
+.btn-check:active+.btn-carusel,
+.btn-carusel:active,
+.btn-carusel.active,
+.show>.btn-carusel.dropdown-toggle {
+    color: #fff;
+    background-color: #565e64;
+    border-color: #51585e;
+}
+
+.btn-check:checked+.btn-carusel:focus,
+.btn-check:active+.btn-carusel:focus,
+.btn-carusel:active:focus,
+.btn-carusel.active:focus,
+.show>.btn-carusel.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
+}
+
+.btn-carusel:disabled,
+.btn-carusel.disabled {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
 }
