--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,9 @@
 @import "../scss/slick-theme.scss";
 @import "../scss/constants/_constants.scss";
 
+//страницы 
+@import "../scss/dev-scss/menu-header.scss";
+
 
 
 
