--- a/src/scss/bootstrap.scss
+++ b/src/scss/bootstrap.scss
@@ -4253,7 +4253,7 @@ textarea.form-control-lg {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0);
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
@@ -5752,6 +5752,7 @@ textarea.form-control-lg {
   display: none;
   float: left;
   width: 100%;
+  max-height: 700px;
   margin-right: -100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -5880,7 +5881,7 @@ textarea.form-control-lg {
   z-index: 2;
   display: flex;
   justify-content: center;
-  padding: 0;
+  padding: 20px;
   margin-right: 15%;
   margin-bottom: 1rem;
   margin-left: 15%;
