--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,8 @@
 //страницы 
 @import "../scss/dev-scss/menu-header.scss";
 @import "../scss/dev-scss/firstscreen.scss";
+@import "../scss/dev-scss/vibori-nas.scss";
+
 
 
 
