--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,18 +1,24 @@
 @import "fonts";
 @import "../scss/bootstrap.scss";
-
-@import "../scss/slick1.8.1.scss";
-
 @import "../scss/nice-select.scss";
+@import "../scss/slick1.8.1.scss";
+@import "../scss/slick-theme.scss";
+
+
 @import "../scss/dev-scss/header.scss";
 
-@import "../scss/slick-theme.scss";
 @import "../scss/constants/_constants.scss";
 
 //страницы 
 @import "../scss/dev-scss/menu-header.scss";
 @import "../scss/dev-scss/firstscreen.scss";
 @import "../scss/dev-scss/vibori-nas.scss";
+@import "../scss/dev-scss/dostavka.scss";
+@import "../scss/dev-scss/uslugi.scss";
+@import "../scss/dev-scss/o-kompanii.scss";
+
+
+
 
 
 
