--- a/src/scss/constants/_constants.scss
+++ b/src/scss/constants/_constants.scss
@@ -15,7 +15,18 @@ a {
         color: $primary1;
     }
 }
+
 $fon: #6A6A6A;
+
+
+.container-fluid {
+    background-color: $fon;
+    max-width: 1820px !important;
+}
+
+.container {
+    max-width: 1140px !important;
+}
 
 
 
@@ -115,4 +126,123 @@ $fon: #6A6A6A;
     color: #fff;
     background-color: #e7873d;
     border-color: #e7873dc0;
+}
+
+//кнопка на картах доставки
+
+.btn-menu-card {
+    width: 150px;
+    height: 50px;
+    color: #fff;
+    background-color: $primary1;
+    border-color: $primary1;
+    border-radius: 20px;
+    padding: 14px;
+}
+
+a.btn.btn-menu-card {
+    font-family: Proxima Nova;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+    color: $primary2;
+}
+
+.btn-menu-card:hover {
+    color: #fff;
+    background-color: $primary3;
+    border-color: $primary3;
+}
+
+.btn-check:focus+.btn-menu-card,
+.btn-menu-card:focus {
+    color: #fff;
+    background-color: #e7873d;
+    border-color: #e7873dc0;
+    box-shadow: 0 0 0 0.25rem #e7873dc0;
+}
+
+.btn-check:checked+.btn-menu-card,
+.btn-check:active+.btn-menu-card,
+.btn-menu-card:active,
+.btn-menu-card.active,
+.show>.btn-menu-card.dropdown-toggle {
+    color: #fff;
+    background-color: #e7873d;
+    border-color: #e73d3dc0;
+}
+
+.btn-check:checked+.btn-menu-card:focus,
+.btn-check:active+.btn-menu-card:focus,
+.btn-menu-card:active:focus,
+.btn-menu-card.active:focus,
+.show>.btn-menu-card.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.25rem #e73d3dc0;
+}
+
+.btn-menu-card:disabled,
+.btn-menu-card.disabled {
+    color: #fff;
+    background-color: #e7873d;
+    border-color: #e7873dc0;
+}
+
+// кнопка подробнее
+
+
+.btn-outline-warning {
+    min-width: 150px;
+    min-height: 50px;
+    border-radius: 20px;
+    color: black;
+    border-color: $primary1;
+    padding: 14px;
+
+}
+
+a.btn.btn-outline-warning {
+
+    font-family: Proxima Nova;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+}
+
+.btn-outline-warning:hover {
+    color: #000;
+    background-color: $primary1;
+    border-color: #ffc107;
+}
+
+.btn-check:focus+.btn-outline-warning,
+.btn-outline-warning:focus {
+    box-shadow: 0 0 0 0.25rem rgba(255, 193, 7, 0.5);
+}
+
+.btn-check:checked+.btn-outline-warning,
+.btn-check:active+.btn-outline-warning,
+.btn-outline-warning:active,
+.btn-outline-warning.active,
+.btn-outline-warning.dropdown-toggle.show {
+    color: #000;
+    background-color: $primary1;
+    border-color: #ffc107;
+}
+
+.btn-check:checked+.btn-outline-warning:focus,
+.btn-check:active+.btn-outline-warning:focus,
+.btn-outline-warning:active:focus,
+.btn-outline-warning.active:focus,
+.btn-outline-warning.dropdown-toggle.show:focus {
+    box-shadow: 0 0 0 0.25rem rgba(255, 193, 7, 0.5);
+}
+
+.btn-outline-warning:disabled,
+.btn-outline-warning.disabled {
+    color: $primary1;
+    background-color: transparent;
 }
