--- a/src/scss/dev-scss/vibori-nas.scss
+++ b/src/scss/dev-scss/vibori-nas.scss
@@ -27,10 +27,11 @@ border: 0;
 }
 
 .vibor-info {
-    padding: 0 90px;
     grid-template-columns: 263px 263px 263px 263px;
     display: grid;
+    justify-content: center;
 }
+
 img.displayed{
     display: block;
     margin: 0 auto;
