--- a/src/scss/dev-scss/o-kompanii.scss
+++ b/src/scss/dev-scss/o-kompanii.scss
@@ -19,20 +19,25 @@
 }
 
 .text-razkaz {
+    position: relative;
     font-family: Proxima Nova;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 31px;
     color: $primary2;
+    z-index: 2;
 }
 
 .fotokompanii {
+    position: relative;
+    margin-top: -150px;
+    margin-left: -150px;
     background-image: url(/img/okompaniii.png);
     width: 647.07px;
     height: 632.97px;
+    z-index: 1;
 }
-
 
 
 
