--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,8 @@
 @import "../scss/dev-scss/dostavka.scss";
 @import "../scss/dev-scss/uslugi.scss";
 @import "../scss/dev-scss/o-kompanii.scss";
+@import "../scss/dev-scss/voprosy.scss";
+
 
 
 
