--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,12 @@
 @import "../scss/dev-scss/uslugi.scss";
 @import "../scss/dev-scss/o-kompanii.scss";
 @import "../scss/dev-scss/voprosy.scss";
+@import "../scss/dev-scss/sotrydnichestvo.scss";
+
+
+@import "../scss/dev-scss/footer.scss";
+
+
 
 
 
