--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-	 font-family: ProximaNova;
+	 font-family: "ProximaNova";
 	font-display: swap;
 	src: url("../fonts/ProximaNova-Light.woff2") format("woff2"), url("../fonts/ProximaNova-Light.woff") format("woff");
 	font-weight: 300;
