--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 //страницы 
 @import "../scss/dev-scss/menu-header.scss";
 @import "../scss/dev-scss/firstscreen.scss";
+@import "../scss/dev-scss/price.scss";
 @import "../scss/dev-scss/vibori-nas.scss";
 @import "../scss/dev-scss/dostavka.scss";
 @import "../scss/dev-scss/uslugi.scss";
