vibor/choice rename

--- a/src/scss/dev-scss/about-we.scss
+++ b/src/scss/dev-scss/about-we.scss
@@ -1,4 +1,4 @@
-.vibor-text {
+.choice-text {
     font-family: Proxima Nova;
     font-style: normal;
     font-weight: 700;
@@ -26,7 +26,7 @@ border: 0;
   padding: 20px;
 }
 
-.vibor-info {
+.choice-info {
     grid-template-columns: 263px 263px 263px 263px;
     display: grid;
     justify-content: center;
