--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,7 +13,7 @@
 @import "../scss/dev-scss/menu-header.scss";
 @import "../scss/dev-scss/firstscreen.scss";
 @import "../scss/dev-scss/price.scss";
-@import "../scss/dev-scss/vibori-nas.scss";
+@import "../scss/dev-scss/about-we.scss";
 @import "../scss/dev-scss/dostavka.scss";
 @import "../scss/dev-scss/uslugi.scss";
 @import "../scss/dev-scss/o-kompanii.scss";
