--- a/src/scss/dev-scss/uslugi.scss
+++ b/src/scss/dev-scss/uslugi.scss
@@ -23,6 +23,7 @@
 }
 
 
+
 .text-uslugi {
     font-family: Proxima Nova;
     font-style: normal;
@@ -48,7 +49,7 @@
     max-width: 360px;
     // min-height: 507px;
     border-radius: 20px;
-
+    padding: 0 20px;
 
 }
 
@@ -60,7 +61,7 @@
     max-width: 360px;
     // height: auto;
     border-radius: 20px;
-
+    padding: 0 20px;
 
 }
 
@@ -72,7 +73,7 @@
     max-width: 360px;
     // height: auto;
     border-radius: 20px;
-
+    padding: 0 20px;
 
 }
 
@@ -84,7 +85,7 @@
     max-width: 360px;
     //     height: auto;
     border-radius: 20px;
-
+    padding: 0 20px;
 
 }
 
