--- a/src/scss/dev-scss/about-company.scss
+++ b/src/scss/dev-scss/about-company.scss
@@ -1,8 +1,8 @@
-.container-o-kompanii {
+.container-about-company {
     padding: 100px 90px;
 }
 
-.text-kompanii {
+.text-about-company {
     font-family: Proxima Nova;
     font-style: normal;
     font-weight: 700;
@@ -29,11 +29,11 @@
     z-index: 2;
 }
 
-.fotokompanii {
+.foto-about-company {
     position: relative;
     margin-top: -150px;
     margin-left: -150px;
-    background-image: url(/img/okompaniii.png);
+    background-image: url(/img/about-company.png);
     width: 647.07px;
     height: 632.97px;
     z-index: 1;
