--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,11 +14,11 @@
 @import "../scss/dev-scss/firstscreen.scss";
 @import "../scss/dev-scss/price.scss";
 @import "../scss/dev-scss/about-we.scss";
-@import "../scss/dev-scss/dostavka.scss";
-@import "../scss/dev-scss/uslugi.scss";
-@import "../scss/dev-scss/o-kompanii.scss";
-@import "../scss/dev-scss/voprosy.scss";
-@import "../scss/dev-scss/sotrydnichestvo.scss";
+@import "../scss/dev-scss/delivery.scss";
+@import "../scss/dev-scss/services.scss";
+@import "../scss/dev-scss/about-company.scss";
+@import "../scss/dev-scss/question.scss";
+@import "../scss/dev-scss/cooperation.scss";
 
 
 @import "../scss/dev-scss/footer.scss";
