--- a/src/scss/dev-scss/delivery.scss
+++ b/src/scss/dev-scss/delivery.scss
@@ -1,4 +1,4 @@
-.dostavka-container {
+.delivery-container {
     position: relative;
     .container-arrows {
         position: absolute;
@@ -26,7 +26,7 @@
     margin-bottom: 100px;
 }
 
-.card-title-dostavka {
+.card-title-delivery {
     font-family: Proxima Nova;
     font-style: normal;
     font-weight: 700;
