--- a/src/scss/dev-scss/question.scss
+++ b/src/scss/dev-scss/question.scss
@@ -3,13 +3,13 @@
     transform: rotate(-90deg);
 }
 
-.container-vopros {
+.container-question {
     padding-bottom: 100px;
 
 
 }
 
-.container-vopros-dop {
+.container-question-dop {
     height: 573px;
     width: 390px ;
     padding: 10px 40px;
@@ -46,7 +46,7 @@
 .right2 {
     position: relative;
     top: -26px;
-
+left: 32px;
     margin: 0 171px;
     width: 27px;
     height: 27px;
@@ -54,7 +54,7 @@
     background-image: url("data:image/svg+xml,%3Csvg width='27' height='27' viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.421875 13.5C0.421875 6.27539 6.27539 0.421875 13.5 0.421875C20.7246 0.421875 26.5781 6.27539 26.5781 13.5C26.5781 20.7246 20.7246 26.5781 13.5 26.5781C6.27539 26.5781 0.421875 20.7246 0.421875 13.5ZM13.5 24.8906C19.7596 24.8906 24.8906 19.8229 24.8906 13.5C24.8906 7.24043 19.8229 2.10938 13.5 2.10938C7.24043 2.10938 2.10938 7.17715 2.10938 13.5C2.10938 19.7596 7.17715 24.8906 13.5 24.8906ZM14.1592 20.0127L20.2289 13.9482C20.4768 13.7004 20.4768 13.2996 20.2289 13.0518L14.1592 6.9873C13.9113 6.73945 13.5105 6.73945 13.2627 6.9873L12.8988 7.35117C12.651 7.59902 12.651 8.01035 12.9094 8.25293L17.4182 12.6035H7.38281C7.03477 12.6035 6.75 12.8883 6.75 13.2363V13.7637C6.75 14.1117 7.03477 14.3965 7.38281 14.3965H17.4182L12.9041 18.7471C12.651 18.9949 12.6457 19.401 12.8936 19.6488L13.2574 20.0127C13.5105 20.2605 13.9113 20.2605 14.1592 20.0127Z' fill='%23B26519'/%3E%3C/svg%3E%0A");
 }
 
-.vopros-label {
+.question-label {
     display: inline-block;
 
 
@@ -70,7 +70,7 @@
     padding: 10px 0;
 }
 
-.text-vopros {
+.text-question {
     text-align: left;
     font-family: Proxima Nova;
     font-style: normal;
@@ -78,7 +78,7 @@
     font-size: 16px;
     line-height: 23px;
     color: $primary2;
-    padding: 13px 0px 0px 23px;
+    padding:10px 0 0 0;
 
 }
 
@@ -89,7 +89,7 @@
     font-size: 24px;
     line-height: 126%;
     color: $primary2;
-    margin: 10px 0 10px 25px;
+    // margin: 10px 0 10px 25px;
 
 }
 
