--- a/src/scss/dev-scss/services.scss
+++ b/src/scss/dev-scss/services.scss
@@ -1,4 +1,4 @@
-.container-uslugi {
+.container-services {
 
     position: relative;
 
@@ -24,7 +24,7 @@
 
 
 
-.text-uslugi {
+.text-services {
     font-family: Proxima Nova;
     font-style: normal;
     font-weight: 700;
@@ -36,15 +36,15 @@
     color: $primary2;
 }
 
-.card-uslugi {
+.card-services {
     // margin: 0 50px;
     padding-bottom: 100px;
 }
 
-.uslugi-foto {
+.services-foto {
     // margin: 0 5px;
     // padding: 0 30px;
-    background-image: url(../img/chel1.png);
+    background-image: url(../img/ransom-s.png);
     background-repeat: no-repeat;
     max-width: 360px;
     // min-height: 507px;
@@ -53,10 +53,10 @@
 
 }
 
-.uslugi-foto2 {
+.services-foto2 {
     // margin: 0 5px;
     // padding: 0 30px;
-    background-image: url(../img/chel2.png);
+    background-image: url(../img/insurance-s.png);
     background-repeat: no-repeat;
     max-width: 360px;
     // height: auto;
@@ -65,10 +65,10 @@
 
 }
 
-.uslugi-foto3 {
+.services-foto3 {
     // margin: 0 5px;
     // padding: 0 30px;
-    background-image: url(../img/arenda.png);
+    background-image: url(../img/lease-s.png);
     background-repeat: no-repeat;
     max-width: 360px;
     // height: auto;
@@ -77,10 +77,10 @@
 
 }
 
-.uslugi-foto4 {
+.services-foto4 {
     // margin: 0 5px;
     // padding: 0 30px;
-    background-image: url(../img/perehod.png);
+    background-image: url(../img/translation-s.png);
     background-repeat: no-repeat;
     max-width: 360px;
     //     height: auto;
@@ -89,7 +89,7 @@
 
 }
 
-.card-title-uslugi {
+.card-title-services {
     // margin: 0 30px;
     margin-top: 255px;
     font-family: Proxima Nova;
@@ -102,7 +102,7 @@
     color: $primary2;
 }
 
-.card-text-uslugi {
+.card-text-services {
     margin: 13px 0;
 
     ;
